<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@color/design_default_color_primary"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".StartActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ourchatapp"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:background="@color/design_default_color_primary_dark"
        android:text="@string/Login"
        android:layout_marginTop="100dp"

        />
    <Button
        android:layout_width="match_parent"
        android:background="@color/design_default_color_primary_dark"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:id="@+id/register"
        android:text="@string/register"

        />




</LinearLayout>